# josh_hates_closures

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: all.rs  is-a-closure-with-capture.rs  is-a-closure-with-capture.stderr  is-a-closure.rs  is-a-closure.stderr  not-a-closure.rs
